# mlpractical

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  setup.py
assignments/assignment1/: .dvcignore  .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  spec.txt
assignments/assignment1/conf/: config.yaml
assignments/assignment1/conf/hydra/: default.yaml
assignments/assignment1/conf/hydra/sweeper/: optuna.yaml
assignments/assignment1/conf/logging/: default.yaml
assignments/assignment1/conf/model/: mlp_medium.yaml
assignments/assignment1/conf/training/: default.yaml
assignments/assignment1/scripts/: generate_synthetic_emnist.py
assignments/assignment1/src/assignment1/: __init__.py  data.py  models.py  train.py  utils.py
feedback/: lab2_feedback.md
mlp/: data_providers.py  errors.py  hebbian.py  initialisers.py  layers.py  learning_rules.py  models.py  optimisers.py  penalties.py  schedulers.py  test_methods.py  utils.py
notebooks/: 00_notebook.ipynb  01_introduction.ipynb  01a_demo_ffn.ipynb  01a_practice_ffn.ipynb  01b_demo_spiking.ipynb  01c_demo_hebbian.ipynb  01d_demo_reinforcement.ipynb  02_Single_layer_models.ipynb  02a_activation_functions.ipynb  02b_simple_recurrence.ipynb  02c_backprop.ipynb  02d_hrm_demo.ipynb  03_Multiple_layer_models.ipynb  03b_extended_pytorch_tests.ipynb  04_Generalisation_and_overfitting.ipynb  Coursework_1.ipynb
notebooks/typecheck/: Coursework_1.py
notebooks/wandb/: latest-run
notebooks/wandb/run-20251010_133413-m1j1t6jz/: run-m1j1t6jz.wandb
notebooks/wandb/run-20251010_134338-z1sh0vdo/: run-z1sh0vdo.wandb
notebooks/wandb/run-20251010_134530-dum5yzur/: run-dum5yzur.wandb
notebooks/wandb/run-20251010_134723-qeffi2l9/: run-qeffi2l9.wandb
notebooks/wandb/run-20251010_134921-80lndteu/: run-80lndteu.wandb
notebooks/wandb/run-20251010_140233-4nolqw8g/: run-4nolqw8g.wandb
notebooks/wandb/run-20251010_140436-54cthgft/: run-54cthgft.wandb
notebooks/wandb/run-20251010_140626-592v1709/: run-592v1709.wandb
notebooks/wandb/run-20251010_140819-nx17wrtx/: run-nx17wrtx.wandb
notebooks/wandb/run-20251010_141006-p1ahr0tc/: run-p1ahr0tc.wandb
notebooks/wandb/run-20251010_141154-927orl7k/: run-927orl7k.wandb
notes/: environment-set-up.md  getting-started-in-a-lab.md  remote-working-guide.md
report/: mlp-cw1-questions.tex  mlp-cw1-template.tex
scripts/: run_hebbian_quick.py  secure-notebook-server.sh
tests/: data_providers_tests.py
(+255 files in other folders)
