[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlp"
version = "0.1.0"
description = "Neural network framework for University of Edinburgh School of Informatics Machine Learning Practical course."
authors = [
    {name = "Pawel Swietojanski"},
    {name = "Steve Renals"},
    {name = "Matt Graham"},
    {name = "Antreas Antoniou"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/VICO-UoE/mlpractical"
Repository = "https://github.com/VICO-UoE/mlpractical"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlp*"]