[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlp"
version = "0.1.0"
description = "Neural network framework for University of Edinburgh School of Informatics Machine Learning Practical course."
authors = [
    {name = "Pawel Swietojanski"},
    {name = "Steve Renals"},
    {name = "Matt Graham"},
    {name = "Antreas Antoniou"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "torch",
    "pandas",
    "wandb"
]

[project.urls]
Homepage = "https://github.com/cortu01/mlpractical"
Repository = "https://github.com/cortu01/mlpractical"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlp*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
testpaths = ["tests"]
